--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
   max-width: 1240px;
   width: 100%;
   margin: 0 auto;
-  padding: 25px;
+  padding: 20px;
   overflow-x: hidden;
 }
 
@@ -321,7 +321,7 @@
 }
 .wrapper-container {
   margin: 25px;
-  max-width: 100%;
+  box-sizing: border-box;
   overflow: hidden;
 }
 .wrapper-container .wrapper-title {
